<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mensaje_conexion">No se pudo copiar la base de datos(no se pudo abrir la conexión)</string>
    <string name="dialog_save">¿Esta seguro confirmar la acción?</string>
    <string name="dialog_delete">¿Esta seguro de eliminar el registro?</string>

    <string name="app_name">RESTOBAR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Usuarios</string>
    <string name="button2">Clientes</string>
    <string name="button3">Mesas</string>
    <string name="button4">Productos</string>
    <string name="button5">Pedidos</string>
    <string name="button6">Facturacion</string>
    <string name="button7">Consultas</string>
    <string name="button8">Reportes</string>
    <string name="Agregar">Agregar</string>
    <string name="Guardar">Guardar</string>

    <!-- STRING SPLASH SCREEN -->
    <string name="integrantes">INTEGRANTES</string>
    <string name="integrantes_miembros">RENÁN GÁLVEZ\n CESAR UBIDIA\n ANDRÉS FUKAZAWA</string>

    <!-- STRING DASHBOARD -->
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_title_pedidos">Pedidos</string>
    <string name="dashboard_title_mapa">Ubicación de franquicias</string>

    <!-- STRING LOGIN -->
    <string name="login_title">Login</string>
    <string name="login_fallido">Usuario y/o contraseña incorrecta</string>

    <!--STRING USUARIO-->
    <string name="usuario_title_Lis">Lista de Usuarios</string>
    <string name="usuario_title">Registro de Usuarios</string>

    <string name="us_codigo">Código</string>
    <string name="us_nombre">Nombre Completo</string>
    <string name="us_email">Email</string>
    <string name="us_clave">Password</string>
    <string name="us_Estado">Inactivo</string>
    <string name="us_registrado">¿Ya tiene cuenta! Entre aquí?</string>



    <!--mensajes de validación -->
    <string name="usuario_val_codigo">Ingrese su código de usuario</string>
    <string name="usuario_val_nombre">Ingrese el nombre de usuario</string>
    <string name="usuario_val_email">Ingrese su email</string>
    <string name="usuario_val_clave">Ingrese su password</string>
    <string name="usuario_val_usuario_clave">Usuario o clave invalida</string>


    <!--STRING MESA -->
    <string name="mesa_title_Lis">Lista de Mesas</string>
    <string name="mesa_title">Registro de mesas</string>
    <string name="me_Codigo">Código</string>
    <string name="me_Nombre">Nombre</string>
    <string name="me_Estado">Inactivo</string>
    <string name="me_Foto">Foto</string>
    <string name="me_CodigoHint">Código Generado</string>
    <string name="me_NombreHint">Ingrese Nombre</string>

    <!--mensajes de validación -->
    <string name="mesa_val_codigo">Ingrese su código</string>
    <string name="mesa_val_nombre">Ingrese el nombre de usuario</string>


    <!--STRING CLIENTES -->
    <string name="cliente_title_Lis">Lista de Clientes</string>
    <string name="cliente_title">Registro de Clientes</string>

    <string name="cl_Codigo">Código</string>
    <string name="cl_RUC">DNI/RUC</string>
    <string name="cl_Nombre">Nombre</string>
    <string name="cl_Estado">Inactivo</string>
    <string name="cl_CodigoHint">Código Generado</string>
    <string name="cl_RUCHint">Ingrese RUC</string>
    <string name="cl_NombreCHint">Ingrese Nombre</string>

    <!--STRING PRODUCTO -->
    <string name="producto_title_Lis">Lista de Productos</string>
    <string name="producto_title">Registro de Productos</string>

    <string name="pr_Codigo">Código</string>
    <string name="pr_Nombre">Nombre</string>
    <string name="pr_Estado">Inactivo</string>
    <string name="pr_Tipo">Tipo de Producto</string>
    <string name="pr_Moneda">Moneda</string>
    <string name="pr_Precio">Precio</string>
    <string name="pr_Descrip">descripción</string>

    <string name="pr_CodigoHint">Código Generado</string>
    <string name="pr_NombrePrHind">Ingrese Nombre de Producto</string>
    <string name="pr_TipoCHint">Ingrese el Tipo de Producto</string>
    <string name="pr_MonedaCHint">Seleccione Moneda</string>
    <string name="pr_PrecioCHint">Ingrese Precio</string>
    <string name="pr_DescripCHint">Ingrese Descripción</string>

    <!--mensajes de validación -->
    <string name="producto_val_descripcion">Ingrese una descripción</string>
    <string name="producto_val_precio">Ingrese el precio del producto</string>


    <!--mensajes de validación -->
    <string name="cliente_val_Codigo">Ingrese el codigo de cliente</string>
    <string name="cliente_val_RUC">Ingrese RUC</string>
    <string name="cliente_val_Nombre">Ingrese nombre del cliente</string>


    <!-- STRING PEDIDO -->
    <string name="pe_Mesa">Mesa :</string>
    <string name="pe_Entradas">Entradas</string>
    <string name="pe_PFondo">Platos de fondo</string>
    <string name="pe_Postres">Postres</string>
    <string name="pe_hint_filtro">Ingrese filtro</string>
    <string name="pe_filtro_instrucciones">Se añadirá primero de la lista.</string>
    <string name="pe_ordenar">Ordenar</string>

    <string name="title_activity_activity_maps">activity_maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="en_construccion">Próximamente disponible</string>


    <!--STRING CLIENTES -->
    <string name="pedido_title_Lis">Proceso de pedidos</string>
    <string name="pedido_search">Seleccione</string>





</resources>
