<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pr_tvCodigo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:text="@string/me_Codigo"
            android:textSize="18dp"
            android:textStyle="bold"
            />


        <EditText android:id="@+id/pr_etCodigo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:enabled="false"
            />

        <TextView
            android:id="@+id/pr_tvNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:text="@string/pr_Nombre"
            android:textSize="18dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/pr_etNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"
            android:hint="@string/pr_NombrePrHind"
             />

        <TextView
            android:id="@+id/pr_tvTipo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:text="@string/pr_Tipo"
            android:textSize="18dp"
            android:textStyle="bold"
            />



        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pr_spTipo"
            android:layout_marginBottom="15dp"
            android:hint="Seleccione opción"
                       android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/pr_tvMoneda"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:text="@string/pr_Moneda"
            android:textSize="18dp"
            android:textStyle="bold"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pr_spMon"
            android:layout_marginBottom="15dp"

            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/pr_tvPrecio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:text="@string/pr_Precio"
            android:textSize="18dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/pr_etPrecio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"
            android:hint="@string/pr_PrecioCHint"
            android:maxLength="60"
            android:numeric="decimal"/>

        <TextView
            android:id="@+id/pr_tvDescrip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:text="@string/pr_Descrip"
            android:textSize="18dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/pr_etDescrip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"
            android:hint="@string/pr_DescripCHint"
            android:maxLength="60" />





        <CheckBox
            android:id="@+id/pr_chkEstado"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:text="@string/pr_Estado"
            android:textSize="18dp"
            android:textStyle="bold"
            />




    </LinearLayout>
</ScrollView>