<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pe_Mesa"
            android:layout_weight="1"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"/>

        <Spinner
            android:id="@+id/sp_pe_mesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"></Spinner>

        </LinearLayout>

    <Button
        android:id="@+id/bt_pe_entradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pe_Entradas"
        android:layout_weight="1"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bt_pe_entradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pe_PFondo"
        android:layout_weight="1"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bt_pe_entradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pe_Postres"
        android:layout_weight="1"
        android:textSize="24dp"
        android:textStyle="bold"/>

</LinearLayout>