<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
   >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/fondo2"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/btnUsuario"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/seguridad2"
                    android:onClick="clicked"
                    android:text="@string/button1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnCliente"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/cliente2"
                    android:onClick="clicked"
                    android:text="@string/button2"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnMesa"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/mesa"
                    android:onClick="clicked"
                    android:text="@string/button3"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnProducto"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/circulo"
                    android:onClick="clicked"
                    android:text="@string/button4"
                   />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnPedido"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/tenedor"
                    android:onClick="clicked"
                    android:text="@string/button5"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnFacturar"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/dolar"
                    android:onClick="clicked"
                    android:text="@string/button6"
                   />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnConsulta"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/buscar2"
                    android:onClick="clicked"
                    android:text="@string/button7"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnReporte"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/nota1"
                    android:onClick="clicked"
                    android:text="@string/button8"
                   />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
